--- a/htmls/WebSearchForm.html
+++ b/htmls/WebSearchForm.html
@@ -1,5 +1,5 @@
 <title>My Internet Search Form</title>
-<link rel="stylesheet" href="..\myStyleSheet1.css">  <!-- My General style sheet file-->
+<link rel="stylesheet" href="..\myStyleSheet1.css"> 
 <link rel="stylesheet" href="WebSearchForm.css"> <!-- local style sheet file-->
 <div id="myNotesBoard">
     <style></style>
