--- a/htmls/WebSearchForm.html
+++ b/htmls/WebSearchForm.html
@@ -1,6 +1,6 @@
 <title>My Internet Search Form</title>
-<link rel="stylesheet" href="..\myStyleSheet1.css"> 
-<link rel="stylesheet" href="WebSearchForm.css"> <!-- local style sheet file-->
+<link rel="stylesheet" href="https://moulaytraining.github.io/MyStock/CSS/myStyleSheet1.css"> 
+<link rel="stylesheet" href="https://moulaytraining.github.io/MyStock/CSS/WebSearchForm.css"> 
 <div id="myNotesBoard">
     <style></style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js" integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -13,5 +13,5 @@
     </textarea>
     <br>
     <button id="save-file" onclick="CreateTextFile()"> save data </button> 
-    <script src="WebSearchForm.js"></script>
+    <script src="https://moulaytraining.github.io/MyStock/scripts/WebSearchForm.js"></script>
 </div>
