--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -24,3 +24,4 @@
   <button class="compDta"> Computer & data science </button>
   </div></div>
   </div>
+<link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css">
