--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -1,4 +1,7 @@
-  <div id="categories" class="sec-head">
+<head>
+  <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css">
+</head>
+<div id="categories" class="sec-head">
   <em><h4> اختر احد المجالات لعرض البنود المتوفرة </h4></em>
   </div>
   <hr>
@@ -24,4 +27,4 @@
   <button class="compDta"> Computer & data science </button>
   </div></div>
   </div>
-<link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css">
+
