--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,4 +1,7 @@
-<html><body>
+<head>
+  <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
 </div>
@@ -214,4 +217,4 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
-</body></html>
+</body>
