--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -1,6 +1,5 @@
-<head>
-  <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css">
-</head>
+<body>
+<link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainCategories.css" rel="stylesheet" type="text/css"> 
 <div id="categories" class="sec-head">
   <em><h4> اختر احد المجالات لعرض البنود المتوفرة </h4></em>
   </div>
@@ -27,4 +26,4 @@
   <button class="compDta"> Computer & data science </button>
   </div></div>
   </div>
-
+</body>
