--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,4 +1,5 @@
 <body>
+<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css"></script>
 <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css" rel="stylesheet" type="text/css">
 <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
@@ -215,4 +216,5 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
+<script>filterSelection("all",""); </script>
 </body>
