--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,5 +1,5 @@
 <body>
-<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css"></script>
+<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.js"></script>
 <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css" rel="stylesheet" type="text/css">
 <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
