--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,4 +1,7 @@
 <body>
+  <head>    
+<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.js"></script>
+  </head>
 <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css" rel="stylesheet" type="text/css">
 <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
@@ -215,6 +218,5 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
-<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.js"></script>
 <script>filterSelection("all",""); </script>
 </body>
