--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -218,5 +218,6 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
-<script>filterSelection("all",""); </script>
+<script>filterSelection('all',''); </script>
+<script>viewKinds(); </script>
 </body>
