--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -10,7 +10,7 @@
 <hr>
 <em><h4> Entry kind </h4></em>
 <div id="myBtnContainer">
-<button class="btn active" onclick="filterSelection('all')"> Show all</button> 
+<button class="btn active" onclick="filterSelection('all','')"> Show all</button> 
 </div> 
 <div class="row">
 <div class="column Ppt">
