--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -8,22 +8,22 @@
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/civil engineering.jpg">
-  <button class="civEng">Civil engineering & construction </button>
+  <button class="civEng" onclick="ShowCategory(this)">Civil engineering & construction </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/project management.jpg">
-  <button class="pjctMgmt"> project management </button>
+  <button class="pjctMgmt" onclick="ShowCategory(this)"> project management </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Architecture.png">
-  <button class="archt"> Architecture </button>
+  <button class="archt" onclick="ShowCategory(this)"> Architecture </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Computer & Data Science.png">
-  <button class="compDta"> Computer & data science </button>
+  <button class="compDta" onclick="ShowCategory(this)"> Computer & data science </button>
   </div></div>
   </div>
 </body>
