--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,9 +1,8 @@
-<body>
   <head>    
-<script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainAndCategories.js"></script>
-  </head>
 <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css" rel="stylesheet" type="text/css">
-<div class="topnav">
+  </head>
+<body>
+  <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
 </div>
 <h2>Project Management</h2>
@@ -218,4 +217,5 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
+  <span onload="viewKinds()"></span>
 </body>
