--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -1,5 +1,6 @@
   <head>    
 <link href="https://moulaytraining.github.io/MyStock/VirtualLibrary/CategoryPage.css" rel="stylesheet" type="text/css">
+    <script src="https://moulaytraining.github.io/MyStock/VirtualLibrary/MainAndCategories.js"></script>
   </head>
 <body>
   <div class="topnav">
