--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -218,5 +218,5 @@
 <h4>Project Monitoring and Control </h4>
 </div></div>
 </div>
-  <span onload="viewKinds()"></span>
 </body>
+<script>viewKinds();</script>
