--- a/VirtualLibrary/pjctMgmt.html
+++ b/VirtualLibrary/pjctMgmt.html
@@ -219,3 +219,26 @@
 </div></div>
 </div>
 </body>
+<script>
+  var myRow=document.querySelector('article .main .row');
+var entriesCount=myRow.children.length-1;
+var kindAbbr,kindName; 
+var counter=0;
+var myCheckList=[];  
+var myBtns=document.querySelector("#myBtnContainer");
+var myElem;
+    for (let index = 0; index <entriesCount ; index++) {
+        kindAbbr=myRow.children[index].classList.item(1);
+        kindName=myRow.children[index].querySelector('article .main .row span').innerText; 
+        if (myCheckList.indexOf(kindAbbr)==-1) {
+            myCheckList.push(kindAbbr);  
+            myElem=document.createElement("button");
+            myElem.setAttribute("class", "btn");
+            myElem.setAttribute("onclick", "filterSelection('"+kindAbbr+"',this)");
+            myElem.innerHTML=kindName;
+            myBtns.appendChild(myElem);            
+        }  
+        counter+=1;
+    } 
+console.log(myCheckList);
+</script>
