--- a/VirtualLibrary/pjctMgmt/pjctMgmt1.html
+++ b/VirtualLibrary/pjctMgmt/pjctMgmt1.html
@@ -6,7 +6,7 @@
   <div class="topnav">
   <a href="https://volunteersgroupvirtuallibrary.blogspot.com/" class="active">Open Virtual Library</a>
 </div>
-<h2Project Management إدارة المشروعات</h2>
+<h2>Project Management إدارة المشروعات</h2>
 <hr>
 <em><h4> نوع المستند </h4></em>
 <div id="myBtnContainer">
