--- a/VirtualLibrary/pjctMgmt/pjctMgmt1.html
+++ b/VirtualLibrary/pjctMgmt/pjctMgmt1.html
@@ -104,4 +104,8 @@
 <h4>Project Management (Wes-Tech) </h4>
 </div></div>
 </div>
+  <script>
+filterSelection('all','');
+viewKinds(); 
+</script>
 </body>
