--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -12,7 +12,7 @@
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/project management.jpg">
-  <button class="pjctMgmt" onclick="ShowCategory(this)"> project management </button>
+  <button class="pjctMgmt" onclick="window.location.href='https://itskillsengineers.blogspot.com/p/project-management.html';"> project management </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
