--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -7,21 +7,21 @@
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/civil engineering.jpg">
-  <button class="civEng" onclick="ShowCategory(this)">Civil engineering & construction </button>
+  <button class="civEng" onclick="ShowCategory(this)">Civil Engineering الهندسة المدنية والإنشاءات </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/project management.jpg">
-  <button class="pjctMgmt" onclick="window.location.href='https://itskillsengineers.blogspot.com/p/project-management.html';"> project management </button>
+  <button class="pjctMgmt" onclick="window.location.href='https://itskillsengineers.blogspot.com/p/project-management.html';"> Project Management إدارة المشروعات</button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Architecture.png">
-  <button class="archt" onclick="ShowCategory(this)"> Architecture </button>
+  <button class="archt" onclick="ShowCategory(this)"> Architecture العمارة</button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Computer & Data Science.png">
-  <button class="compDta" onclick="ShowCategory(this)"> Computer & data science </button>
+  <button class="compDta" onclick="ShowCategory(this)"> Computer & Data Science علوم الحاسب الآلي والبيانات </button>
   </div></div>
   </div>
