--- a/VirtualLibrary/pjctMgmt/pjctMgmt1.html
+++ b/VirtualLibrary/pjctMgmt/pjctMgmt1.html
@@ -4,6 +4,9 @@
 <body>
   <div class="topnav">
   <a href="https://itskillsengineers.blogspot.com/p/under-testing-document.html" class="active">المكتبة المجانية</a>
+  <a href="https://itskillsengineers.blogspot.com/p/project-management.html" class="active">إدارة المشروعات Project Management</a>  
+  <a href="https://itskillsengineers.blogspot.com/p/under-testing-document.html" class="active">المكتبة المجانية</a>
+  <a href="https://itskillsengineers.blogspot.com/p/under-testing-document.html" class="active">المكتبة المجانية</a>
 </div> 
 <em><h4> نوع المستند </h4></em>
 <div id="myBtnContainer">
