--- a/VirtualLibrary/MainCategories.html
+++ b/VirtualLibrary/MainCategories.html
@@ -7,21 +7,21 @@
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/civil engineering.jpg">
-  <button class="civEng" onclick="ShowCategory(this)">Civil Engineering الهندسة المدنية والإنشاءات </button>
+  <button class="civEng" onclick="ShowCategory(this)">الهندسة المدنية والإنشاءات Civil Engineering </button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/project management.jpg">
-  <button class="pjctMgmt" onclick="window.location.href='https://itskillsengineers.blogspot.com/p/project-management.html';"> Project Management إدارة المشروعات</button>
+  <button class="pjctMgmt" onclick="window.location.href='https://itskillsengineers.blogspot.com/p/project-management.html';"> إدارة المشروعات Project Management</button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Architecture.png">
-  <button class="archt" onclick="ShowCategory(this)"> Architecture العمارة</button>
+  <button class="archt" onclick="ShowCategory(this)"> العمارة Architecture</button>
   </div></div>
   <div class="column"> 
   <div class="content"> 
   <img src="https://VolunteersGroup.github.io/MyStocks/Images/CategoryCovers/Computer & Data Science.png">
-  <button class="compDta" onclick="ShowCategory(this)"> Computer & Data Science علوم الحاسب الآلي والبيانات </button>
+  <button class="compDta" onclick="ShowCategory(this)">  علوم الحاسب الآلي والبيانات Computer & Data Science</button>
   </div></div>
   </div>
