--- a/VirtualLibrary/pjctMgmt/pjctMgmt1.html
+++ b/VirtualLibrary/pjctMgmt/pjctMgmt1.html
@@ -8,7 +8,7 @@
   <a href="https://itskillsengineers.blogspot.com/p/under-testing-document.html" class="active">المكتبة المجانية</a>
   <a href="https://itskillsengineers.blogspot.com/p/under-testing-document.html" class="active">المكتبة المجانية</a>
 </div> 
-<em><h4> نوع المستند </h4></em>
+<em><h4> فرز حسب نوع المستند </h4></em>
 <div id="myBtnContainer">
 <button class="btn active" onclick="filterSelection('all','')"> Show all</button> 
 </div> 
